feat: Complete VM management system with automated changelog workflow
### Major Features Added:
- Interactive VM management with colored terminal output using colorama
- Comprehensive VirtualBox integration with VBoxManage CLI detection
- SSH terminal access with automatic IP resolution via Guest Additions
- Guest Additions ISO mounting and installation automation
- VM message broadcasting to all terminals (SSH + VBoxManage methods)
- Combined start-and-connect functionality (svo action)
- Interactive argument prompting for missing required parameters
- Automated changelog generation pipeline with GitHub Actions

### Core Actions Implemented:
- list: Display all available VMs with status indicators
- start/stop: VM power management with graceful/force options
- ip: Retrieve VM IP addresses through Guest Additions
- status: Get current VM state information
- terminal: Open SSH connections to running VMs
- svo: Start VM and open terminal in one command
- message: Broadcast messages to all VM terminals
- guest: Install Guest Additions ISO mounting

### Technical Improvements:
- Robust VBoxManage path detection with multiple fallback strategies
- Dual logging system (verbose file logging + clean console UI)
- Cross-platform colored output with proper Windows Terminal integration
- SSH command parsing fixes for proper argument separation
- Interactive user/VM selection with numbered menu options
- Comprehensive error handling and timeout protection
- Memory and resource cleanup for long-running operations

### Infrastructure & Automation:
- GitHub Actions workflow for automatic changelog updates
- Conventional commit message parsing and categorization
- Manual changelog management script with validation
- Comprehensive .gitignore for Python projects
- Organized workflow scripts in .github/scripts/ directory
- Repository documentation with usage examples

### Configuration Changes:
- Removed YAML configuration dependency for simplified deployment
- Dynamic VM discovery th

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
+    permissions:
+      contents: write
+      pull-requests: read
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -185,8 +189,8 @@ jobs:
 
     - name: Commit changes
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         
         if git diff --exit-code Changelog.md; then
           echo "No changes to commit"
@@ -195,7 +199,7 @@ jobs:
           git commit -m "Update changelog with recent commits
 
           [skip ci]"
-          git push
+          git push origin main
         fi
 
   check-changelog:
